--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </h1>
 
     <form class="form">
-      <input type="search" class="input_search" placeholder="Nome ou número" required />
+      <input class="input_search" placeholder="Buscar por nome ou id" required />
+      <button type="submit" class="btn-search">🔎</button>
     </form>
 
     <div class="buttons">
